syntax = "proto3";

package ru.est0y.generated;

option java_multiple_files = true;

message Range {
    int64 initialValue = 1;
    int64 finalValue = 2;
}
message Number{
    int64 value=1;
}

message Empty {}

service RemoteService {
    rpc getNumbers(Range) returns (stream Number);
}
